hand-made-scrapbooking

--- a/css/style.less
+++ b/css/style.less
@@ -200,7 +200,7 @@ height: @radius * 2;
 }
 
 .header{
-    background: #fff url(../images/header_bg.jpg) 0 0 no-repeat;
+    background: #fff url(../images/header_bg-min.jpg) 0 0 no-repeat;
     background-size: cover;
     background-attachment: fixed;
 
