--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,9 @@ ul {
   left: 0;
   right: 0px;
   top: -31px;
-  -webkit-box-shadow: 1px 1px 2px 1.5px #cccccc;
-  -moz-box-shadow: 1px 1px 2px 1.5px #cccccc;
-  box-shadow: 1px 1px 2px 1.5px #cccccc;
+  -webkit-box-shadow: 1px 1px 2px 1.5px #CCC;
+  -moz-box-shadow: 1px 1px 2px 1.5px #CCC;
+  box-shadow: 1px 1px 2px 1.5px #CCC;
   -webkit-border-radius: 19px;
   -moz-border-radius: 19px;
   -o-border-radius: 19px;
@@ -36,7 +36,7 @@ ul {
   z-index: 3;
 }
 section.big_block:nth-of-type(even) {
-  background-color: #cccccc;
+  background-color: #CCC;
 }
 .big_block:after {
   position: absolute;
@@ -77,7 +77,7 @@ section.big_block:nth-of-type(even) {
   }
 }
 .header {
-  background: #ffffff url(../images/header_bg.jpg) 0 0 no-repeat;
+  background: #fff url(../images/header_bg-min.jpg) 0 0 no-repeat;
   background-size: cover;
   background-attachment: fixed;
 }
@@ -181,7 +181,7 @@ body {
   padding: 10px 30px;
   font-size: 16px;
   text-decoration: none;
-  color: #333333;
+  color: #333;
   -webkit-border-radius: 14px;
   -moz-border-radius: 14px;
   -o-border-radius: 14px;
@@ -197,7 +197,7 @@ body {
 }
 .main_meni.navbar-default.navbar ul.nav a:hover {
   color: white;
-  background-color: #cccccc;
+  background-color: #CCC;
 }
 .main_meni.navbar-default.navbar ul.nav a:active {
   top: 1px;
@@ -373,7 +373,7 @@ body {
   width: 2px;
   border-left: 2px dashed #000;
   height: 37px;
-  background-color: #cccccc;
+  background-color: #CCC;
   z-index: 1;
 }
 .team_person_photo {
